[package]
name = "promptly"
version = "0.1.4"
authors = ["Anthony Nowell <anowell@gmail.com>"]
license = "MIT"

description = "Simple, opinionated CLI prompting helper"
repository = "https://github.com/anowell/promptly"
keywords = ["prompt", "cli", "readline", "autocomplete"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
rustyline = "1.0.0"
