[package]
name = "promptly"
version = "0.3.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Simple, opinionated CLI prompting helper"
repository = "https://github.com/anowell/promptly"
keywords = ["prompt", "cli", "readline", "autocomplete"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
rustyline = "6.0.0"
url = { version = "2.0.0", optional = true }

[features]
default = []
nightly = []
